# JacoROS

./: .gitignore  CMakeLists.txt~  README.md  README.md~
CSharpWrapper/CSharpWrapper/: CSharpWrapper.cs  CSharpWrapper.csproj  CSharpWrapper.sln
Jaco Software/1 - Jaco/driver/: Installing Jaco driver in Windows 8.docx  cmd Vista et Win7.txt  mchpusb.inf
Jaco Software/2 - Jacosoft [3.2.5.3]/: serial number Jacosoft.txt
Jaco Software/3 - Jaco dsp code [4.2.9.1]/: Jaco_Code_v4.2.9.0001.hex
Jaco Software/4 - API [5.0.2.0]/Documentation/: Index.aspx  WebKI.xml  WebTOC.xml
Jaco Software/4 - API [5.0.2.0]/Documentation/html/: 000f2b67-c7a5-9453-0527-6f8875038c82.htm  006397c3-b4e0-b82b-1da5-9947f3a6f28e.htm  01065a5b-d181-3d93-3df6-f645bc89e044.htm  02ae2425-2f11-952a-3ab8-6f96c71ab550.htm  02b960d2-1e21-2d5c-713f-213d807c99af.htm  02c90fcb-1e60-99fd-1f8e-4de7a1de8b02.htm  042c1bc1-894f-4c35-5401-2abb03de3070.htm  0432f603-da7c-73c3-5714-5a5821f54b2e.htm  0449b326-1ed7-d3e2-9d72-2fed4ca0557f.htm  0456ebab-cc22-3002-2c9a-0e52cc6d52c0.htm  04659b58-ac65-e611-f88c-f1bad40d2da2.htm  05425ee8-367d-867b-d6ed-3ebf5891f40b.htm  0543d535-1659-8820-09d6-5ffc360a50e2.htm  05a47861-a9c5-11ef-0b4c-6c4ff8c1e735.htm  05e9ee72-21af-6048-bdd4-0fea2a3bff2d.htm  064a3f72-a07b-5593-3a6b-aca8f21444c2.htm  0650b159-6577-f119-47cb-34ae6cc03374.htm  06707a13-5974-4582-e136-ced977c86c02.htm  067cf558-4d19-2a0c-ebdc-c36c066ae0ba.htm  06fafc5f-6e60-94b2-9f53-33d7f9da135b.htm  08203cb0-ff30-d41f-bb94-71cb2f5675c1.htm  08d4ce22-cbf1-7f32-0ead-a31f5885cdc6.htm  0945cb07-e620-81ee-3bfa-e34064678709.htm  09991a25-9864-9969-67fe-a1c77ddd8f5c.htm  09b33f7c-d394-d36b-20c3-40381ba6952b.htm  09df3f7b-2fd9-b2a0-6098-8abe0a434121.htm  0a8863aa-d400-3195-6c10-53eb897bbea6.htm  0a99f16d-6a3b-9681-43c7-a8a57af87d5f.htm  0b167bf9-1492-a01a-8aca-43cfe411c7ee.htm  0c37ae47-2965-2787-ec01-5fe089b34630.htm  0c85e311-bc78-4ef2-d77b-aaa12b063fe0.htm  0c8aca1f-b261-00cc-0f2c-8979dd5204fc.htm  0cc5aa90-9bd1-36ff-e83b-8cf8789ab8bf.htm  0cd99d32-67dc-e245-4249-19e125b7ca7a.htm  0d1f01c6-ef08-3756-bf8c-574cc3182b04.htm  0e2203dd-61d7-34d1-d29c-01e68837f02b.htm  0e4cb772-a74b-d11d-d3b0-b81158577d92.htm  0e5185d4-76cd-73c2-1b56-e02779690d25.htm  0e5b95dd-8e55-9d76-376c-1efa12a339b5.htm  0f42bb45-4a34-8599-16ab-6536ee383d99.htm  (+495 more)
Jaco Software/4 - API [5.0.2.0]/Ubuntu/: AdvanceInstall.sh  EasyInstall.sh
Jaco Software/4 - API [5.0.2.0]/Ubuntu/CPP/LibUbuntu32/: Kinova.API.UsbCommandLayerUbuntu.h
Jaco Software/4 - API [5.0.2.0]/Ubuntu/Examples/Kinova.GUI.HealthCenter/: Kinova.GUI.HealthCenter.pidb  Kinova.GUI.HealthCenter.sln  Main.cs  MainWindow.cs
Jaco Software/4 - API [5.0.2.0]/Ubuntu/Examples/Kinova.GUI.JacoUbuntu/: AssemblyInfo.cs  Kinova.GUI.JacoUbuntu.csproj  Kinova.GUI.JacoUbuntu.sln  MainWindow.cs  (+1 more)
Jaco Software/4 - API [5.0.2.0]/Windows/CPP/: Kinova.API.UsbCommandLayer.h
Jaco Software/4 - API [5.0.2.0]/Windows/CommunicationServer/: Kinova.DLL.Data.xml  Kinova.GUI.CommunicationManager.exe.config
Jaco Software/Ulinx USB to Serial Device installation/: setup.ini  setup.msi
Jaco Software/Ulinx USB to Serial Device installation/USB Drivers/: ftdibus.cat  ftdibus.inf  ftdiport.cat  ftdiport.inf
Kinova/AppData/Products/Licenses/: private.key  public.key
jaco/: CMakeLists.txt  CMakeLists2.txt  package.xml  source_list.yaml  test_jaco_joints.py
jaco/action/: FingerMovement.action
jaco/include/jaco/: abstract_jaco.h  gripper_controller.h  jaco.h  jaco_action_controller.h  jaco_joystick_publisher.h  jaco_node.h
jaco/launch/: start.launch  start.launch~
jaco/src/: abstract_jaco.cpp  gripper_controller (copy).cpp  gripper_controller.cpp  jaco.cpp  jaco_action_controller.cpp  jaco_joystick_publisher.cpp  jaco_node.cpp
jaco_description/: CMakeLists.txt
jaco_description/jaco_ikfast/: ikfast61_arm.cpp
jaco_description/meshes/: finger.dae  finger.stl  hand.stl  hand_with_noFinger.stl  joint_1.stl  joint_3.stl  joint_4.stl  joint_5.stl
jaco_description/urdf/: jaco_arm.urdf.xacro~
jaco_description/urdf/gazebo/: ikfast61_arm.cpp  jaco.urdf  jaco.urdf.xacro  jaco.urdf.xacro~  jaco_new.urdf.xacro~  jaco_standalone.urdf.xacro
jaco_driver/: CMakeLists.txt  package.xml
jaco_driver/Jaco Software/1 - Jaco/driver/: Installation du pilote de Jaco dans Windows 8.docx
jaco_driver/Jaco Software/4 - API [5.0.2.0]/: Password.txt
jaco_driver/Jaco Software/4 - API [5.0.2.0]/Documentation/: Index.html
jaco_driver/Jaco Software/4 - API [5.0.2.0]/Ubuntu/: Readme.txt
jaco_driver/jaco/: CMakeLists.txt
jaco_driver/jaco/include/jaco/: gripper_controller.h
jaco_driver/jaco/launch/: start.launch
jaco_driver/jaco/src/: gripper_controller.cpp  jaco_node.cpp
jaco_driver/jaco_description/: package.xml
jaco_driver/jaco_description/launch/: jaco_gazebo.launch
jaco_driver/jaco_description/meshes/: joint_2.stl  joint_6.stl
jaco_driver/jaco_description/urdf/gazebo/: jaco.urdf  jaco.urdf.xacro  jaco_standalone.urdf.xacro
jaco_driver/jaco_driver/: package.xml
jaco_driver/jaco_smach/: package.xml
jaco_gazebo/gripper_gazebo/src/: open_gripper.cpp
jaco_ikfast_arm_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
jaco_ikfast_arm_plugin/src/: jaco_arm_ikfast_solver.cpp
jaco_ikfast_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh
jaco_ikfast_plugin/src/: jaco_arm_ikfast_moveit_plugin.cpp  jaco_arm_ikfast_solver.cpp
jaco_moveit_config/: .setup_assistant  package.xml
jaco_moveit_config/config/: controllers.yaml  controllers.yaml~  controllers_gazebo.yaml  jaco.srdf  jaco.srdf~  joint_limits.yaml  kinematics.yaml
jaco_moveit_config/launch/: bringup_gazebo_moveit_planning_execution.launch  bringup_moveit_planning_execution.launch  demo.launch  jaco_gazebo_moveit_controller_manager.launch  jaco_moveit_sensor_manager.launch  move_group.launch  move_group.launch~  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  sensor_manager.launch  start_all.launch  trajectory_execution.launch  warehouse.launch
jaco_smach/: CMakeLists.txt
(+316 files in other folders)
