<package>
  <name>jaco_description</name>
  <version>1.0.0</version>
  <description>jaco_description - URDF model of the Kinova Jaco arm.</description>
  <maintainer email="sankar.natarajan@dfki.de">Sankaranarayanan Natarajan</maintainer>

  <license>GPL v3 or later</license>

  <url type="website">http://ros.org/wiki/jaco_description</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="sankar.natarajan@dfki.de">Sankaranarayanan Natarajan</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>urdf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>urdf</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>urdf</test_depend> -->

</package>