<package>
  <name>jaco_smach</name>
  <version>1.0.0</version>
  <description>jaco_smach</description>
  <maintainer email="">Sankaranarayanan Natarajan</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jaco_smach</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Sankaranarayanan Natarajan</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rostopic</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>smach_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>
  <build_depend>kinematics_msgs</build_depend>
  <build_depend>move_arm</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jaco</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rostopic</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>smach_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>
  <run_depend>kinematics_msgs</run_depend>
  <run_depend>move_arm</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>jaco</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rostopic</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>smach</test_depend> -->
  <!-- <test_depend>smach_ros</test_depend> -->
  <!-- <test_depend>smach_msgs</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>arm_navigation_msgs</test_depend> -->
  <!-- <test_depend>kinematics_msgs</test_depend> -->
  <!-- <test_depend>move_arm</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>jaco</test_depend> -->

<export>
    <cpp cflags="-I${prefix}/msg/cpp"/>
</export>

</package>